@@ -1,6 +1,18 @@
-DIST knights-2.4.2.tar.bz2 3416105 SHA256 1ad0c4092b62ced2ba14b33dbca72fbaba171603f31d0e49556391ec3a0a3ec7 SHA512 8bbfeef933fb6fd40b342c74252bf1bc0ff555b72bc58e5cab39dae43270332a1590165c4f492ca087e31342d24066e08c81239946aeaf464f0049d09fccf4c9 WHIRLPOOL bc1e52f2279bed8b72861a00e0ad25f7a01d4d199e1b459fd144f597f59037fafd3414a5c3f0e64d00ae521bfa2b4296045890b7fbe64724ef275caad3baa452
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST knights-2.5.0.tar.bz2 3426822 SHA256 6567c4203c55ebe0ae6b5a25c852d7beef8b88d4154592437bc357797da5bd28 SHA512 3024fb9747c0b412e606db9262e9a547f51bfe0a5bd7e3de2952ba09da0186a45d5a21182e394b16d5905d036b94a17ed8b80c7d2c808f7ab907f4f4c6d9fa95 WHIRLPOOL 5cf2b98128898fb9be607c31e4c0df510dfa8c18e6bf00db2fa53c19005f64658894ed84c14d92ff70b1cb6cdb5d04a94cb2876791f10e90bb3fb9b35e054e6c
-EBUILD knights-2.4.2.ebuild 893 SHA256 821b095952075cf4131c45c97cd14e129e7bb1185b12eb1fcd775a3d09ef18ed SHA512 ab1c931680769577d7e013e6d425bccfd4af6467765ff151a4757932bd3481b54d6e58fffb375dd105297be775eccf98b22781801e6fabaf0738f041affe4583 WHIRLPOOL 43f68b51cf8f6c90aa24d893c9e2596968a5c6739fc0d1e5faceccd18577e054b4bbad782c89899d793f25a9edc2ad1e97d49fe289082e6b02be2d439d61ec23
 EBUILD knights-2.5.0.ebuild 919 SHA256 75fa9baa2aae6924095e03509cd539fcabc983e1cf8a382bd7c236ff2076f03c SHA512 4df2693ffb10e9dea1e2273f94d2014bf5e76310f64607a59cb0afd11a396a89b20ca11d1eeb7e18ed2deccd7f1fa6280f780b65bf6eb08918dad9dc0e4740c2 WHIRLPOOL d30654b0c6968b5b4c179b34edc348f3bb07528ef36041e886adf81a13db3896aafb2f0839efb911caac0041a6c4d116844945cc68d2d69f88ab15a67d72cb4a
-MISC ChangeLog 3071 SHA256 78c8f53833d4442b379caadc178474457675ac0e1e4ee326673587d871a67a14 SHA512 bc0f711c042f3c15d2e7d2508a732afa112e08ea7262ca793da9cc56c114c3ce1567302c812ffdd58d06f11059022acf700e9fdf59e3998d6461649ad873cd0a WHIRLPOOL ea9f083b5d2922482545ab68e4e52ca006bae1c2b632d2e0fa245f255d64e669f17ba1ae9a9b7fee45ba65ae9728b95912f4ff79ade915da27883001e5abd96a
+MISC ChangeLog 3158 SHA256 b6d35faabbfb97876d425270b663778fe7d1c4a0f93ebf2dccb2abe97a11b262 SHA512 1445141cfac5231818d32350251eb8f08c5be8d521c35899d183f08fcbf7dbe1074ad4baba6262d6dd0b37b6abeabafd6570d21446c30da0f7e288227643a718 WHIRLPOOL bbdf380e0406f5c84635aa92fef9d03d275477c6e9ae04ecdeb8d37ec4257d317b843132b4ed40845765a8cf24d092197f5d07aab76bf5f0e57be8a617a935f3
 MISC metadata.xml 177 SHA256 528dee660b85c05dc8cdacf3156bceecc1c2f63d607e2c89659fb5d240750109 SHA512 b32f4b01d5055e7f68c9466e22760fd2708e1ed49f02cfd2771952bfe9960aef69581dcb3a4c6ce7393fbb480b363133d8aee336e6c6761b3cbf316f6f85c71c WHIRLPOOL 7e2ba3b82a2423aea0cf07a255d19d537045cc4f1816c651d57a8a06e8b2d3a9a0e3358eb40efabd27a330c9ecc01a37a5eddb6bd1e88ffbf71e43ee2a7f9515
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJQsPOQAAoJEO+t9ga+3I3am6YH/ix5SxFDQf7tIL6y/l6mnTEJ
+SJA6G7j3TQvucPFRFEudddrjeT0K9o2pIrjyT6INNBNblEsdb8MrBSd4duZNduEf
+JVWCpvD6oDw5BlUaVjRQAFH4wBB5QnZWFjjmTgK8N5GvOhfj4l2N/b8w3lBLpZzD
+LDjf6A8zo4XCz6vY8BmAio/WF+SiqfBwky5ZpyS6n4jNSP+fLR36AYFaRgjD0yM7
+XCInVWOxtAT0mNcmOz8z+gALDvXRtgSZQ6mixxPNFjhlm7X/fXPmbY+1oh3kGgu5
+sgOyg+CBhpkiaaFZErPeQ4B5d8VrO2W3bMIBWk4ltM/vu0emXFDg/ZUMI01GaBU=
+=tX/q
+-----END PGP SIGNATURE-----
